welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if(estSurBiscuit){
        ^Program:12: error: Boolean does not take parameters
		if(vuBiscuit()){
                            ^Program:17: error: Boolean does not take parameters
		}while(!vuBiscuit())
                                 ^